--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-		<h1>BinSpaghetti</h1>
-		<h3>An open source software suite for all your number conversion needs.</h2>
-		<a href="https://github.com/ThatOcelot/binspaghetti">Download</a>
-		<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
+	<h1>BinSpaghetti</h1>
+	<h3>An open source software suite for all your number conversion needs.</h2>
+	<a href="https://github.com/ThatOcelot/binspaghetti/archive/refs/heads/main.zip">Download ZIP</a>
+	  <a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
+	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
   </body>
 </html>
