--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 	<h1>BinSpaghetti</h1>
 	<h3>An open source software suite for all your number conversion needs.</h2>
-	<a href="https://github.com/ThatOcelot/binspaghetti/archive/refs/heads/main.zip">Download ZIP</a>
+	<a href="https://github.com/ThatOcelot/binspaghetti/archive/refs/tags/v21.08.25.zip">Download ZIP</a>
 	  <a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
   </body>
