--- a/contributors.html
+++ b/contributors.html
@@ -9,7 +9,8 @@
   <body>
 	<h1>Contributors</h1>
 	<h3>ThatOcelot</h2>
-    <p>ThatOcelot is the benevolent dictator for life of the BinSpaghetti project. He has his own </p>
-    <a href="index.html">website.</a>
+	  <p>ThatOcelot is the benevolent dictator for life of the BinSpaghetti project.</p>
+	  <h3>SetatX/SemtanX</h3>
+	  <p>SetatX created Broken Spaghetti and added weight conversion features.</p>
   </body>
 </html>
