--- a/contributors.html
+++ b/contributors.html
@@ -12,5 +12,6 @@
 	  <p>ThatOcelot is the benevolent dictator for life of the BinSpaghetti project.</p>
 	  <h3>SetatX/SemtanX</h3>
 	  <p>SetatX created Broken Spaghetti and added weight conversion features.</p>
+	  <a href="index.html">Home</a>
   </body>
 </html>
