--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 	 <a href="downloads.html">Downloads</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
+	  <a href="contributors.html">Contributors</a>
   </body>
 </html>
