--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </nav>
   <body>
 	<h1>BinSpaghetti</h1>
-	<h3>An open source software suite for all your number conversion needs.</h2>
+	<h3>An open source software suite for all your number conversion needs.</h3>
+	  <p>Welcome to BinSpaghetti.</p>
   </body>
 </html>
