--- a/downloads.html
+++ b/downloads.html
@@ -6,6 +6,13 @@
     <title>Downloads</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+  <nav>
+	<a href="index.html">Home</a>
+	<a href="downloads.html">Downloads</a>
+	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
+	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
+	<a href="contributors.html">Contributors</a>
+</nav>
   <body>
     <h1>Downloads</h1>
     <a href="https://github.com/ThatOcelot/binspaghetti/archive/refs/tags/v21.08.25.zip">Download stable ZIP</a>
@@ -14,6 +21,5 @@
     <a href="https://github.com/ThatOcelot/binspaghetti/archive/refs/tags/v21.08.26e.zip">Download experimental ZIP</a>
     <a href="https://github.com/ThatOcelot/binspaghetti/archive/refs/tags/v21.08.26e.tar.gz">Download experimental TAR</a>
     <br>
-    <a href="index.html">Home</a>
 </body>
 </html>
