--- a/contributors.html
+++ b/contributors.html
@@ -6,12 +6,18 @@
     <title>Contributors</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+	<nav>
+	<a href="index.html">Home</a>
+	<a href="downloads.html">Downloads</a>
+	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
+	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
+	<a href="contributors.html">Contributors</a>
+</nav>
   <body>
 	<h1>Contributors</h1>
 	<h3>ThatOcelot</h2>
 	  <p>ThatOcelot is the benevolent dictator for life of the BinSpaghetti project.</p>
 	  <h3>SetatX/SemtanX</h3>
 	  <p>SetatX created Broken Spaghetti and added weight conversion features.</p>
-	  <a href="index.html">Home</a>
   </body>
 </html>
