--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </nav>
   <body>
 	<h1>BinSpaghetti</h1>
-	<h3>An open source software suite for all your number conversion needs.</h3>
-	  <p>Welcome to BinSpaghetti.</p>
+	  <p>BinSpaghetti is an open-source software suite for different things involving numbers.</p>
   </body>
 </html>
