--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>BinSpaghetti</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-<nav>
-	<a href="index.html">Home</a>
-	<a href="downloads.html">Downloads</a>
-	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
-	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
-	<a href="contributors.html">Contributors</a>
-</nav>
-  <body>
-	<h1>BinSpaghetti</h1>
-	  <p>BinSpaghetti is an open-source software suite for different things involving numbers.</p>
-  </body>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>BinSpaghetti</title>
+<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<div id="nav">
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="downloads.html">Downloads</a></li>
+<li><a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a></li>
+<li><a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a></li>
+<li><a href="contributors.html">Contributors</a></li>
+</ul>
+</div>
+<div id="content">
+<h1>BinSpaghetti</h1>
+<p>BinSpaghetti is an open-source software suite for different things involving numbers.</p>
+</div>
+</body>
 </html>
