--- a/contributors.html
+++ b/contributors.html
@@ -16,7 +16,7 @@
   <body>
 	<h1>Contributors</h1>
 	<h3>ThatOcelot</h2>
-	  <p>ThatOcelot is the benevolent dictator for life of the BinSpaghetti project.</p>
+	  <p><a href="https://thatocelot.github.io/">ThatOcelot</a> is the benevolent dictator for life of the BinSpaghetti project.</p>
 	  <h3>SetatX/SemtanX</h3>
 	  <p>SetatX created Broken Spaghetti and added weight conversion features.</p>
   </body>
