--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
   <body>
 	<h1>BinSpaghetti</h1>
 	  <p>BinSpaghetti is an open-source software suite for different things involving numbers.</p>
+	  <p>We have: </p>
+	  <ul>
+		  <li>A binary/decimal/hexadecimal convertor</li>
+		  <li>Weight convertors</li>
+		  <li>A program that will output all numbers between zero and a given number</li>
+		  <li>A division calculator</li>
   </body>
 </html>
