--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 		  <li>Weight convertors</li>
 		  <li>A program that will output all numbers between zero and a given number</li>
 		  <li>A division calculator</li>
+		  <li>An energy calculator</li>
+	  </ul>
   </body>
 </html>
