--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
 	<a href="contributors.html">Contributors</a>
+	<a href="social.html">Social</a>
 </nav>
   <body>
 	<h1>BinSpaghetti</h1>
@@ -21,7 +22,7 @@
 		  <li>A binary/decimal/hexadecimal/octal convertor</li>
 		  <li>Weight convertors</li>
 		  <li>A program that will output all numbers between zero and a given number</li>
-		  <li>A division calculator</li>
+		  <li>A arithmetic calculator</li>
 		  <li>An energy calculator</li>
 	  </ul>
   </body>
