--- a/contributors.html
+++ b/contributors.html
@@ -6,12 +6,13 @@
     <title>Contributors</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-	<nav>
+<nav>
 	<a href="index.html">Home</a>
 	<a href="downloads.html">Downloads</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
 	<a href="contributors.html">Contributors</a>
+	<a href="social.html">Social</a>
 </nav>
   <body>
 	<h1>Contributors</h1>
