--- a/downloads.html
+++ b/downloads.html
@@ -12,6 +12,7 @@
 	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
 	<a href="contributors.html">Contributors</a>
+	<a href="social.html">Social</a>
 </nav>
   <body>
     <h1>Downloads</h1>
