--- a/social.html
+++ b/social.html
@@ -6,8 +6,16 @@
     <title>Social</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+<nav>
+	<a href="index.html">Home</a>
+	<a href="downloads.html">Downloads</a>
+	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
+	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
+	<a href="contributors.html">Contributors</a>
+	<a href="social.html">Social</a>
+</nav>
   <body>
     <h1>Social</h1>
-		<a href="https://www.youtube.com/channel/UC1_bTfnkwlsxB6fjBgCLJzQ">YouTube</a>
+	<a href="https://www.youtube.com/channel/UC1_bTfnkwlsxB6fjBgCLJzQ">YouTube</a>
   </body>
 </html>
