--- a/social.html
+++ b/social.html
@@ -3,19 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Social</title>
+    <title>Coming Soon</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-<nav>
-	<a href="index.html">Home</a>
-	<a href="downloads.html">Downloads</a>
-	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
-	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
-	<a href="contributors.html">Contributors</a>
-	<a href="social.html">Social</a>
-</nav>
   <body>
-    <h1>Social</h1>
-	<a href="https://www.youtube.com/channel/UC1_bTfnkwlsxB6fjBgCLJzQ">YouTube</a>
+    <h1>Nothing! Absolutely nothing!</h1>
+	<a href="index.html">Go Home</a>
   </body>
 </html>
