--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
 	<a href="contributors.html">Contributors</a>
+  	<a href="kajam.html">Kajam</a>
 </nav>
   <body>
 	<h1>BinSpaghetti</h1>
