--- a/downloads.html
+++ b/downloads.html
@@ -7,11 +7,12 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <nav>
-	<a href="index.html">Home</a>
+		<a href="index.html">Home</a>
 	<a href="downloads.html">Downloads</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
 	<a href="contributors.html">Contributors</a>
+  <a href="kajam.html">Kajam</a>
 </nav>
   <body>
     <h1>Downloads</h1>
