--- a/kajam.html
+++ b/kajam.html
@@ -16,6 +16,6 @@
 </nav>
   <body>
 	<h1>Kajam</h1>
-    <p>All of our Kajam games are coded in Kaboom, Replit's weird implementation of Java.</p>
+	  <p><a href="replit.com">Replit</a> (not affiliated with BinSpaghetti, though it was, at one point, our primary IDE) hosts an annual game-jam called "Kajam". A portmanteau of "Kaboom" (a Replit game library) and "jam" (as in game jam), the BinSpaghetti team will participate in the event starting in 2021.</p>
   </body>
 </html>
