--- a/kajam.html
+++ b/kajam.html
@@ -12,10 +12,10 @@
 	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
 	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
 	<a href="contributors.html">Contributors</a>
-  <a href="kajam.html">Kajam</a>
+  <a href="kajam.html">KaJam</a>
 </nav>
   <body>
 	<h1>Kajam</h1>
-	  <p><a href="replit.com">Replit</a> (not affiliated with BinSpaghetti, though it was, at one point, our primary IDE) hosts an annual game-jam called "Kajam". A portmanteau of "Kaboom" (a Replit game library) and "jam" (as in game jam), the BinSpaghetti team will participate in the event starting in 2021.</p>
+	  <p><a href="replit.com">Replit</a> (not affiliated with BinSpaghetti, though it was, at one point, our primary IDE) hosts an annual game-jam called "KaJam". A portmanteau of "Kaboom" (a Replit game library for JavScript) and "jam" (as in game jam), the BinSpaghetti team will participate in the event starting in 2021.</p>
   </body>
 </html>
