--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width">
     <title>BinSpaghetti</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-<nav>
-	<a href="index.html">Home</a>
-	<a href="downloads.html">Downloads</a>
-	<a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a>
-	<a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a>
-	<a href="contributors.html">Contributors</a>
-</nav>
+</head>
+
   <body>
-	<h1>BinSpaghetti</h1>
+	<div class="nav">
+	<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="downloads.html">Downloads</a></li>
+		<li><a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a></li>
+		<li><a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a></li>
+		<li><a href="contributors.html">Contributors</a></li>
+	</ul>
+	  </div>
+		
+	  <h1>BinSpaghetti</h1>
 	  <p>BinSpaghetti is an open-source software suite for different things involving numbers.</p>
 	  <p>We have: </p>
 	  <ul>
