--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
   <body>
-	<div class="nav">
+	<div class="topnav">
 	<ul>
-		<li><a href="index.html">Home</a></li>
+		<li><a class="active" href="index.html">Home</a></li>
 		<li><a href="downloads.html">Downloads</a></li>
 		<li><a href="https://github.com/ThatOcelot/binspaghetti">View on Github</a></li>
 		<li><a href="https://github.com/ThatOcelot/binspaghetti/wiki">Wiki</a></li>
